[gd_scene load_steps=3 format=2]

[ext_resource path="res://GameScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]

[node name="Control" type="Spatial"]
script = ExtResource( 2 )

[node name="StartMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FileDialog" type="FileDialog" parent="StartMenu"]
margin_right = 315.0
margin_bottom = 130.0
popup_exclusive = true
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/home/boti/Programming/CarEdu"
current_path = "/home/boti/Programming/CarEdu/"

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu"]
anchor_left = 0.8
anchor_top = 0.4
anchor_right = 0.95
anchor_bottom = 0.4
grow_horizontal = 0

[node name="LevelSelectButton" type="Button" parent="StartMenu/VBoxContainer"]
margin_right = 153.0
margin_bottom = 20.0
text = "Select level file"

[node name="StartButton" type="Button" parent="StartMenu/VBoxContainer"]
margin_top = 24.0
margin_right = 153.0
margin_bottom = 44.0
disabled = true
text = "Start"

[node name="LoadErrorDialog" type="AcceptDialog" parent="StartMenu"]
margin_right = 83.0
margin_bottom = 58.0
window_title = "Error loading level file"

[node name="Message" type="Label" parent="StartMenu/LoadErrorDialog"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 22.0
text = "asdasd"

[node name="Game" parent="." instance=ExtResource( 1 )]

[connection signal="file_selected" from="StartMenu/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="StartMenu/VBoxContainer/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
